--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-node_modules
+NODE_ENV = development
+PORT = 3000
+MONGO_URI = mongodb+srv://Pierre90:Piersa90@social.16lnykp.mongodb.net/?retryWrites=true&w=majority
+JWT_SECRET = 0CbC5BwBNwY3NSQDXPqDtsUPrG42Y8IG 
+
