--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon app.js"
   },
   "dependencies": {
+    "agora-access-token": "^2.0.4",
     "bcrypt": "^5.1.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
